tests/snapshots/golden_typescript__auth_manager_ts_single_basic_scheme.snap
---
source: tests/golden_typescript.rs
expression: contents
---
// Minimal API MCP server — generated by mcpify. Do not hand-edit.

import type { AuthMethod, Config } from '../core/config-schema.js';
import { loadCredential, saveCredential } from '../core/credential-storage.js';
import type { AuthConfig, AuthStrategy, Credentials } from './auth-strategy.js';
import { toCredentialsMap, type RequestCredentials } from './request-credentials.js';
import { BasicAuthStrategy } from './strategies/basic.js';
import { StubAuthStrategy } from './strategies/stub.js';
import { NoActiveCredentialsError } from './errors.js';

const strategies: Record<AuthMethod, AuthStrategy> = {
  basic: new BasicAuthStrategy(),
};

export const CREDENTIAL_ACCOUNT = 'active-credentials';

const HEADER_LOCATIONS: Record<AuthMethod, [string, string]> = {
  basic: ['header', 'Authorization'],
};

/**
 * Where `authMethod`'s credential value travels on the wire — used only by
 * the HTTP-transport auth-gate/extractor (`http/auth-extractor.ts`) to know
 * which incoming header to read; stdio never calls this.
 */
export function headerLocationFor(authMethod: AuthMethod): [string, string] {
  return HEADER_LOCATIONS[authMethod];
}

/**
 * Selects exactly one active auth strategy per deployment, chosen via the
 * `auth_method` config value (REQ-1.2.3) — there is no runtime engine for
 * resolving multiple simultaneously-required schemes.
 */
export class AuthManager {
  private cachedCredentials?: Credentials;

  constructor(private readonly authMethod: AuthMethod) {}

  private get strategy(): AuthStrategy {
    return strategies[this.authMethod] ?? new StubAuthStrategy();
  }

  async login(config: AuthConfig): Promise<Credentials> {
    const credentials = await this.strategy.authenticate(config);
    this.cachedCredentials = credentials;
    await saveCredential(CREDENTIAL_ACCOUNT, JSON.stringify(credentials));
    return credentials;
  }

  /**
   * Seeds in-memory credentials directly, bypassing OS-keychain/file
   * storage entirely — for tests (which must never touch the real OS
   * keychain as a side effect of running) and for callers that already
   * hold validated credentials from elsewhere.
   */
  setCredentials(credentials: Credentials): void {
    this.cachedCredentials = credentials;
  }

  async getCredentials(): Promise<Credentials> {
    if (this.cachedCredentials && this.strategy.validateCredentials(this.cachedCredentials)) {
      return await this.normalizeCredentials(this.cachedCredentials);
    }

    const envConfig = this.credentialsFromEnv();
    if (envConfig) {
      const credentials = await this.strategy.authenticate(envConfig);
      const normalized = await this.normalizeCredentials(credentials);
      this.cachedCredentials = normalized;
      return normalized;
    }

    const stored = await loadCredential(CREDENTIAL_ACCOUNT);
    if (stored) {
      const parsed = JSON.parse(stored) as Credentials;
      if (this.strategy.validateCredentials(parsed)) {
        const normalized = await this.normalizeCredentials(parsed);
        this.cachedCredentials = normalized;
        await saveCredential(CREDENTIAL_ACCOUNT, JSON.stringify(normalized));
        return normalized;
      }
      // A blob with a refresh token has completed the initial exchange at
      // some point (it just expired) — use the cheap refresh path. A blob
      // with neither a valid access token nor a refresh token is straight
      // out of the setup wizard (a raw authorization_code, never
      // exchanged yet), so fall through to the full exchange instead of
      // giving up.
      let exchanged: Credentials | undefined;
      if (this.strategy.refreshToken) {
        try {
          exchanged = await this.strategy.refreshToken(parsed);
        } catch {
          exchanged = undefined;
        }
      }
      if (!exchanged) {
        try {
          exchanged = await this.strategy.authenticate(parsed);
        } catch {
          exchanged = undefined;
        }
      }
      if (exchanged) {
        const normalized = await this.normalizeCredentials(exchanged);
        this.cachedCredentials = normalized;
        await saveCredential(CREDENTIAL_ACCOUNT, JSON.stringify(normalized));
        return normalized;
      }
    }

    throw new NoActiveCredentialsError(this.authMethod);
  }

  /**
   * `.env.example` documents `OUT_TOKEN`/`_API_KEY`/
   * `_USERNAME`+`_PASSWORD` as valid ways to supply credentials, but until
   * this override those vars were never actually read into auth — only a
   * prior `setup` run (keychain/file) produced working credentials. Checked
   * ahead of the stored-credential lookup so a deployment can be configured
   * entirely via environment, with no `setup` step required.
   */
  private credentialsFromEnv(): AuthConfig | undefined {
    if (this.authMethod === 'basic') {
      const username = process.env.OUT_USERNAME;
      const password = process.env.OUT_PASSWORD;
      if (username && password) return { username, password };
    }
    return undefined;
  }

  private async normalizeCredentials(credentials: Credentials): Promise<Credentials> {
    if (
      'authorizationHeader' in credentials ||
      'apiKey' in credentials ||
      'requestHeaderName' in credentials
    ) {
      return { ...credentials };
    }
    if (credentials.accessToken) {
      return { ...credentials, authorizationHeader: `Bearer ${credentials.accessToken}` };
    }
    return this.strategy.authenticate(credentials);
  }

  /**
   * Decorates outgoing request headers with credentials for `transport`:
   * on `'http'`, `requestOverride` (extracted per-request from the
   * caller's own headers — see `http/auth-extractor.ts`) is the *only*
   * source ever consulted, since HTTP deployments must never leak the
   * operator's local config/keychain secrets to a caller who didn't
   * supply their own; a missing override is a hard error, not a
   * fallback. On `'stdio'`, `requestOverride` is ignored and behavior is
   * unchanged from before HTTP-transport support existed:
   * `getCredentials()` (config cascade + keychain).
   *
   * API-key placement (header vs. query, and the header/param name)
   * defaults to an `X-Api-Key` header here; a scheme declaring a
   * different location is one of Story 12's api-client responsibilities
   * to refine, not this manager's — `requestOverride`'s
   * `requestHeaderName`/`requestHeaderValue` pair is the one exception,
   * since the HTTP path already knows the scheme's declared header name
   * (`TsAuthSchemeView.headerName`) at generation time.
   */
  async applyAuthHeaders(
    headers: Record<string, string>,
    method: string,
    url: string,
    transport: Config['transport'],
    requestOverride?: RequestCredentials,
  ): Promise<Record<string, string>> {

    let credentials: Credentials;
    if (transport === 'http') {
      if (!requestOverride) {
        throw new Error(
          'no credentials were supplied on this HTTP request; local config/env/keychain is ' +
            'never used as a fallback over HTTP transport',
        );
      }
      credentials = toCredentialsMap(requestOverride);
    } else {
      credentials = await this.getCredentials();
    }
    // method/url are part of this method's fixed public signature (every
    // active strategy's header-decoration needs them in principle), but
    // only OAuth1's per-request signing actually consumes them — unused
    // here since OAuth1 wasn't discovered for this deployment.
    void method;
    void url;
    if (credentials.requestHeaderName) {
      return { ...headers, [credentials.requestHeaderName]: credentials.requestHeaderValue ?? '' };
    }
    if (credentials.authorizationHeader) {
      return { ...headers, Authorization: credentials.authorizationHeader };
    }
    if (credentials.apiKey) {
      return { ...headers, 'X-Api-Key': credentials.apiKey };
    }
    return headers;
  }
}
