tests/snapshots/golden_typescript__config_schema_ts_all_four_schemes.snap
---
source: tests/golden_typescript.rs
expression: contents
---
// Multi Scheme API MCP server — generated by mcpify. Do not hand-edit.

import { z } from 'zod';

// One literal per auth scheme mcpify discovered in the OpenAPI spec's
// components.securitySchemes (or the interactive fallback) — REQ-1.2.1-3.
export const AuthMethodSchema = z.enum([
  'basic',
  'pat',
  'oauth2',
  'oauth1',
]);
export type AuthMethod = z.infer<typeof AuthMethodSchema>;

// mcpify:versions:begin
export const ApiVersionSchema = z.enum([
  'default',
]);
export const DEFAULT_API_VERSION = 'default';
// mcpify:versions:end
export type ApiVersion = z.infer<typeof ApiVersionSchema>;

export const ConfigSchema = z.object({
  url: z.string().url(),
  auth_method: AuthMethodSchema,
  api_version: ApiVersionSchema.default(DEFAULT_API_VERSION),
  log_level: z.enum(['fatal', 'error', 'warn', 'info', 'debug', 'trace']).default('info'),
  rate_limit: z.coerce.number().int().positive().default(100),
  timeout_ms: z.coerce.number().int().positive().default(30000),
  cache_size: z.coerce.number().int().positive().default(500),
  retry_attempts: z.coerce.number().int().nonnegative().default(3),
  transport: z.enum(['stdio', 'http']).default('stdio'),
  host: z.string().default('127.0.0.1'),
  port: z.coerce.number().int().positive().default(3000),
  cors_allow: z.string().optional(),
});

export type Config = z.infer<typeof ConfigSchema>;

/**
 * The built-in defaults layer of the config cascade (REQ-2.2's lowest-priority
 * tier) — every field of `ConfigSchema` that carries a zod `.default(...)`,
 * with the value it defaults to. Introspects the schema itself (rather than
 * hand-maintaining a parallel list) so this can never drift from the actual
 * `.default()` calls above. `url` and `auth_method` carry no default and are
 * intentionally absent from the result.
 */
export function builtInDefaults(): Partial<Config> {
  const defaults: Record<string, unknown> = {};
  for (const [key, fieldSchema] of Object.entries(ConfigSchema.shape)) {
    if (fieldSchema instanceof z.ZodDefault) {
      defaults[key] = fieldSchema._def.defaultValue();
    }
  }
  return defaults as Partial<Config>;
}
