tests/snapshots/golden_typescript__file_tree_single_oauth2_scheme.snap
---
source: tests/golden_typescript.rs
expression: file_tree(&output_dir)
---
[
    ".env.example",
    ".githooks/pre-commit",
    ".github/workflows/ci.yml",
    ".github/workflows/docker-build.yml",
    ".github/workflows/release.yml",
    ".gitignore",
    ".mcpify/settings.yaml",
    ".npmignore",
    ".releaserc.json",
    "Dockerfile",
    "LICENSE",
    "README.md",
    "biome.json",
    "docker-compose.yml",
    "mcp_store.db",
    "package.json",
    "scripts/heap-profile-summary.js",
    "scripts/populate-embeddings.ts",
    "scripts/profile.sh",
    "src/auth/auth-manager.ts",
    "src/auth/auth-strategy.ts",
    "src/auth/errors.ts",
    "src/auth/request-credentials.ts",
    "src/auth/strategies/oauth2.ts",
    "src/auth/strategies/stub.ts",
    "src/cli.ts",
    "src/cli/call-command.ts",
    "src/cli/config-command.ts",
    "src/cli/get-command.ts",
    "src/cli/http-command.ts",
    "src/cli/search-command.ts",
    "src/cli/setup-command.ts",
    "src/cli/setup-wizard.ts",
    "src/cli/start-command.ts",
    "src/cli/test-connection-command.ts",
    "src/cli/version-command.ts",
    "src/cli/versions-command.ts",
    "src/core/api-url-builder.ts",
    "src/core/cache-manager.ts",
    "src/core/circuit-breaker.ts",
    "src/core/component-registry.ts",
    "src/core/config-manager.ts",
    "src/core/config-schema.ts",
    "src/core/correlation-context.ts",
    "src/core/credential-storage.ts",
    "src/core/errors.ts",
    "src/core/health-check-manager.ts",
    "src/core/log-transport.ts",
    "src/core/logger.ts",
    "src/core/mcp-server.ts",
    "src/core/rate-limiter.ts",
    "src/core/sanitizer.ts",
    "src/core/shutdown-handler.ts",
    "src/core/tracing.ts",
    "src/data/store-repository.ts",
    "src/healthcheck.ts",
    "src/http/auth-extractor.ts",
    "src/http/http-server.ts",
    "src/http/localhost-detector.ts",
    "src/http/metrics.ts",
    "src/http/types.ts",
    "src/index.ts",
    "src/services/api-client.ts",
    "src/services/embedding-service.ts",
    "src/tools/call-tool.ts",
    "src/tools/get-tool.ts",
    "src/tools/register-tools.ts",
    "src/tools/search-tool.ts",
    "src/tools/tool-executor.ts",
    "src/validation/generated-schemas.json.zst",
    "src/validation/validator.ts",
    "tests/e2e/embeddings-populated.test.ts",
    "tests/e2e/mcp-server.test.ts",
    "tests/helpers/dummy-credentials.ts",
    "tests/helpers/log-capture.ts",
    "tests/helpers/mcp-test-client.ts",
    "tests/helpers/mock-api-server.ts",
    "tests/helpers/skip-integration.ts",
    "tests/integration/call-pipeline.test.ts",
    "tests/unit/auth/oauth2.test.ts",
    "tests/unit/auth/stub.test.ts",
    "tests/unit/core/config-manager.test.ts",
    "tests/unit/tools/call-tool.test.ts",
    "tests/unit/tools/get-tool.test.ts",
    "tests/unit/tools/search-tool.test.ts",
    "tsconfig.json",
    "vitest.config.ts",
]
