tests/snapshots/golden_typescript__package_json_all_four_schemes.snap
---
source: tests/golden_typescript.rs
expression: contents
---
{
  "name": "out",
  "version": "0.1.0",
  "description": "Multi Scheme API MCP server, generated by mcpify.",

  "license": "MIT",



  "keywords": [],
  "private": false,
  "type": "module",
  "main": "dist/index.js",
  "types": "dist/index.d.ts",
  "bin": {
    "out": "./dist/cli.js"
  },
  "files": [
    "dist/",
    "mcp_store.db",
    "README.md"
  ],
  "engines": {
    "node": ">=22.15.0"
  },
  "scripts": {
    "build": "tsc",
    "postbuild": "chmod +x dist/cli.js && node -e \"require('fs').cpSync('src/validation', 'dist/validation', { recursive: true, filter: (p) => require('fs').statSync(p).isDirectory() || p.endsWith('.zst') })\"",
    "dev": "tsc --watch",
    "start": "node dist/index.js",
    "test": "vitest run",
    "test:unit": "vitest run tests/unit",
    "test:integration": "RUN_INTEGRATION_TESTS=true vitest run tests/integration",
    "test:e2e": "RUN_E2E_TESTS=true vitest run tests/e2e",
    "test:coverage": "vitest run --coverage",
    "lint": "biome lint ./src ./tests",
    "lint:fix": "biome lint --write ./src ./tests",
    "format": "biome format --write ./src ./tests",
    "format:check": "biome format ./src ./tests",
    "setup": "tsx src/cli/setup-wizard.ts",
    "populate-embeddings": "tsx scripts/populate-embeddings.ts",
    "docker:build": "docker build -t out:latest ."
  },
  "dependencies": {
    "@modelcontextprotocol/sdk": "^1.0.0",
    "@opentelemetry/api": "^1.9.1",
    "@opentelemetry/exporter-jaeger": "^2.8.0",
    "@opentelemetry/exporter-prometheus": "^0.219.0",
    "@opentelemetry/instrumentation": "^0.219.0",
    "@opentelemetry/instrumentation-http": "^0.219.0",
    "@opentelemetry/resources": "^2.8.0",
    "@opentelemetry/sdk-metrics": "^2.8.0",
    "@opentelemetry/sdk-trace-node": "^2.8.0",
    "@opentelemetry/semantic-conventions": "^1.41.1",
    "@xenova/transformers": "^2.17.2",
    "ajv": "^8.17.1",
    "axios": "^1.7.7",
    "better-sqlite3": "^12.4.1",
    "commander": "^12.1.0",
    "express": "^4.21.0",
    "inquirer": "^10.2.2",
    "js-yaml": "^4.1.0",
    "keytar": "^7.9.0",
    "oauth-1.0a": "^2.2.6",
    "pino": "^9.4.0",
    "sqlite-vec": "^0.1.3",
    "zod": "^3.23.8"
  },
  "devDependencies": {
    "@vitest/coverage-v8": "^2.1.1",
    "@biomejs/biome": "^2.5.2",
    "@types/better-sqlite3": "^7.6.13",
    "@types/express": "^4.17.21",
    "@types/inquirer": "^9.0.7",
    "@types/js-yaml": "^4.0.9",
    "@types/node": "^22.7.4",
    "@semantic-release/commit-analyzer": "^13.0.0",
    "@semantic-release/github": "^11.0.0",
    "@semantic-release/npm": "^12.0.1",
    "@semantic-release/release-notes-generator": "^14.0.1",
    "pino-pretty": "^11.2.2",
    "semantic-release": "^24.1.1",
    "tsx": "^4.19.1",
    "typescript": "^5.6.2",
    "vitest": "^2.1.1"
  }
}
