tests/snapshots/golden_typescript__register_tools_ts_all_four_schemes.snap
---
source: tests/golden_typescript.rs
expression: contents
---
// Multi Scheme API MCP server — generated by mcpify. Do not hand-edit.

import type { McpServer } from '@modelcontextprotocol/sdk/server/mcp.js';

import type { AuthManager } from '../auth/auth-manager.js';
import type { Config } from '../core/config-schema.js';
import type { Store } from '../data/store-repository.js';
import { callInputShape, callOperation } from './call-tool.js';
import { getInputShape, getOperation } from './get-tool.js';
import { searchInputShape, searchOperations } from './search-tool.js';
import { executeTool } from './tool-executor.js';

export interface ToolContext {
  store: Store;
  config: Config;
  authManager: AuthManager;
}

/** Registers the 3 universal tools — `search`, `get`, `call` (PRD §1.5) —
 * with the MCP server instance. */
export function registerTools(server: McpServer, context: ToolContext): void {
  server.tool(
    'search',
    'Semantic search for Multi Scheme API operations using a natural-language query.',
    searchInputShape,
    async ({ query, limit }) => executeTool('search', () => searchOperations(context.store, query, limit)),
  );

  server.tool(
    'get',
    'Return the schema, path, method, and documentation for a specific Multi Scheme API operationId.',
    getInputShape,
    async ({ operationId }) => executeTool('get', () => getOperation(context.store, operationId)),
  );

  server.tool(
    'call',
    'Validate arguments, invoke a live Multi Scheme API API operation, and validate the response.',
    callInputShape,
    async ({ operationId, arguments: operationArgs }) =>
      executeTool('call', () =>
        callOperation(context.store, context.config, context.authManager, operationId, operationArgs),
      ),
  );
}
